--- a/vitae.html
+++ b/vitae.html
@@ -65,7 +65,7 @@
         <p><em>Find my curriculum vitae below:</em></p>
 
         <p class='text-right'><a href='./new_cv_sankha.pdf' target='_blank'><i class='fas fa-print fa-fw' aria-hidden='true'></i>&nbsp;Print CV</a></p><iframe width='100%'
-          height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item' src='/docs/DunhamCV.pdf' allowfullscreen></iframe>
+          height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item' src='./new_cv_sankha.pdf' allowfullscreen></iframe>
 
       </div>
     </div>
