--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
         <p class="position-title mt-2 mb-1" style="line-height:14%" >Graduate Student, Department of Geosciences</p>
         <p class="position-title mt-0 mb-4" style="line-height:14%">The University of Arizona</p>
 
-        <p>Hi, I am a Geoscience graduate student (PhD) at the University of Arizona. I am working with Dr. Eric Kiser in the Global Seismology and Tectonics (GSAT) group. In terms of research, I am interested in computational Seismology which primarily includes Earthquake location, Seismic Tomography. The focus of my current research is identification of crustal seismicity using deep learning methods and imaging the shallow crustal structures with local earthquake tomography.  <br />
-        I am an Indian citizen and originally I belong from Asansol, an industrially reknowned city in the state of West Bengal in India. I have completed my Bachelor's and Master's degree (BS-MS) in Physics from IISER Kolkata in India (2016-2021). Then I have joined the graduate program here at the university of Arizona from Fall 2021. I am highly enthusiastic about cricket and soccer. I am also interested in photography. You can see some of my captures here.  </p>
+       <p>Hi, I am a graduate student (PhD) in the Geoscience department at the University of Arizona. I am working with Dr. Eric Kiser in the Global Seismology and Tectonics (GSAT) group. Originally, I am from the state of West Bengal in India. I have started my PhD journey from Fall 2021 after completing my bachelor’s and master’s degree (BS-MS) in Physics from Indian Institute of Science Education and Research (IISER) Kolkata in India (2016-2021). <br />
 
+        In terms of research, I am interested in computational Seismology which primarily includes earthquake source study, earthquake location and seismic tomography. Currently, I am working on the TANGO project to understand the earthquake distribution and subsurface structure in central Andes in South America using nodal seismic data. I am using Deep-learning based methods for earthquake detection and performing local earthquake tomography to image the shallow crustal structures. <br />
+        On a different note, I am highly enthusiastic about soccer and cricket. I also have interest in photography. Please check out my captures here.</p>
 
      
         <!--span class="badge" id="badge-more">more</span-->
