--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-6 text-muted">
 
-        <p>&copy; 2022 Audrey Dunham </p>
+        <p>&copy; 2022 Sankha Subhra Mahanti </p>
 
       </div>
       <div class="col-sm-6">
@@ -12,10 +12,10 @@
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
           <!-- <li><a href="" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li> -->
-          <li><a href="mailto:amd95@email.arizona.edu" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></li>
-          <li><a href="https://scholar.google.com/citations?user=JK_E5HoAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
-          <li><a href="https://github.com/adunham1" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
-          <li><a href="https://linkedin.com/in/audrey-dunham-7307001b0/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          <li><a href="mailto:ssmahanti@arizona.edu" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=8bypqoYAAAAJ&hl=en&oi=ao" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
+          <li><a href="https://github.com/ssmahanti" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+          <!--li><a href="https://linkedin.com/in/audrey-dunham-7307001b0/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li-->
           <!-- <li><a href="" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li> -->
         </ul>
 
