--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col-sm-12">
         <h1>Research</h1>
-        <p>In terms of research, I am interested in computational Seismology which primarily includes Earthquake location, Seismic Tomography. The focus of my current research is identification of crustal seismicity using deep learning methods and imaging the shallow crustal structures with local earthquake tomography. </p>
+        <p>In terms of research, I am interested in computational Seismology which primarily includes earthquake source study, earthquake location and seismic tomography. The focus of my current research is identification of crustal seismicity using deep learning methods and imaging the shallow crustal structures with local earthquake tomography. I am working on the <a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> project using nodal seismic data to identify the crustal faults, magma bodies and their relation with seismicity in Central Andes.</p>
 
         <!-- List of Research interests -->
         <!--<ul class="push-down-1 list-unstyled">
