--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
        <p>Hi, I am a graduate student (PhD) in the Geoscience department at the University of Arizona. I am working with Dr. Eric Kiser in the Global Seismology and Tectonics (GSAT) group. Originally, I am from the state of West Bengal in India. I have started my PhD journey from Fall 2021 after completing my bachelor’s and master’s degree (BS-MS) in Physics from Indian Institute of Science Education and Research (IISER) Kolkata in India (2016-2021). <br />
 
         In terms of research, I am interested in computational Seismology which primarily includes earthquake source study, earthquake location and seismic tomography. Currently, I am working on the TANGO project to understand the earthquake distribution and subsurface structure in central Andes in South America using nodal seismic data. I am using Deep-learning based methods for earthquake detection and performing local earthquake tomography to image the shallow crustal structures. <br />
-        On a different note, I am highly enthusiastic about soccer and cricket. I also have interest in photography. Please check out my captures here.</p>
+        On a different note, I am highly enthusiastic about soccer and cricket. I also have interest in photography but at a very basic level. Please check out my captures <a href="https://www.instagram.com/clicks_ssm/">here</a>
+.</p>
 
      
         <!--span class="badge" id="badge-more">more</span-->
