--- a/index.html
+++ b/index.html
@@ -121,7 +121,19 @@
           </li>
 
         </ul>
+        <h3 class="push-down-3"><span>Latest Updates</span></h3>
 
+      <ol id="news">
+      <li>
+      <p>I shall give a talk titled <strong>"Beyond the Big Ones"</strong> at the <a href="https://tedx.arizona.edu/" target="_blank">TEDxUofA</a> event on October 18, 2024.</p>
+      </li>
+      <li>
+      <p>I was awarded the <strong>first place winner</strong> at the <a href="https://gradcenter.arizona.edu/writing-communication/grad-slam" target="_blank">Gradslam</a> 2024 competition (Best 3-minutes graduate research presentation) at UofA. The final round presentation is available here: <a href="https://www.youtube.com/watch?v=URAJdPelpSc&t=6s" target="_blank">Watch video</a></p>
+      </li>
+      <li>
+      <p>I have been awarded the <strong>Society of Exploration Geophysicists (SEG) Scholarship</strong> for academic year 2024-2025.</p>
+      </li>
+      </ol>
       </div>
     </div>
 
