--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Research | Sankha Subhra Mahanti</title>
+  <title>Publication | Sankha Subhra Mahanti</title>
 
   <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
   <link rel="apple-touch-icon" sizes="57x57" href="favicons_me/apple-icon-57x57.png">
@@ -59,9 +59,7 @@
 
     <div class="row">
       <div class="col-sm-12">
-        <h1>Research</h1>
-        <p>In terms of research, I am interested in computational Seismology which primarily includes earthquake source study, earthquake location and seismic tomography. The focus of my current research is identification of crustal seismicity using deep learning methods and imaging the shallow crustal structures with local earthquake tomography. I am working on the <a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> project using nodal seismic data to identify the crustal faults, magma bodies and their relation with seismicity in Central Andes.</p>
-
+        
         <!-- List of Research interests -->
         <!--<ul class="push-down-1 list-unstyled">
           <li><strong>Seismic waveform modeling</strong>&mdash;{A brief description of this area}</li>
@@ -73,19 +71,14 @@
         </ul>-->
 
         <!-- Publication -->
-        <h3 class="push-down-4"><span>Publications</span></h3>
+        <h3 class="push-down-4"><span>Journal Papers</span></h3>
+        <ul class="publications">
+          <li>1. Mahanti, S.S., Mitra, S. and Miyake, H., Teleseismic Source Modelling of Strong-to-major Himalayan Earthquakes, <em>AGU Fall Meeting Abstracts (2020),</em> (Vol. 2020, pp. S037-0015).</li>
+          <li>2. Banerjee, R., Mahanti, S. S., Chaudhuri, D., Chatterjee, A., and Mitra, S., Intraplate Strike-slip Earthquakes in NE India: A Kinematic Model, <em>AGU Fall Meeting abstracts (2021).</em></li>
+        </ul>
 
         
-
-        <!--ul class="publications">
-          <li><strong>Dunham, A.,</strong> Kiser,E., Kargel, J., Haritashya, U., Watson., S, Shugar, D., <em>(in prep). </em> The influence of ground shaking on the distribution and size of coseismic landslides from the Mw 7.6 2005 Kashmir earthquake</li>
-          <li><strong>Dunham, A.,</strong> Kiser, E., Kargel, J., Haritashya, U., Watson, S., Shugar, D., Hughes, A., DeCelles, P., 2021. Topographic control of ground motions and landslides from the 2015 Gorkha earthquake. <em>Geophys. Res. Lett.</em> <a href="https://doi.org/10.1029/2022GL098582" target="_blank">doi.org/10.1029/2022GL098582</a>.</li></li>
-          <li>Kintner, J., Cleveland, M., Modrak, R., <strong>Dunham, A.,</strong> 2021. Rayleigh Wave Propagation in the Bighorn Mountains Region, Wyoming. BSSA. <a href="https://doi.org/10.1785/0120210116" target="_blank">doi.org/10.1785/0120210116</a>.</li>
-          <li><strong>Dunham, A.,</strong> Kiser, E., 2020. Local earthquake tomography of the Central Oregon forearc using a large-N, short duration, nodal array. Earth Planet. Sci. Lett. 551. <a href="https://doi.org/10.1016/j.epsl.2020.116559" target="_blank">doi.org/10.1016/j.epsl.2020.116559</a>..</li>
-          <li>Lay T., Ye L., Ammon CJ., <strong>Dunham, A.,</strong> , Koper KD. 2016. The 2 March 2016 Wharton Basin Mw 7.8 earthquake: High stress drop north-south strike-slip rupture in the diffuse oceanic deformation zone between the Indian and Australian Plates, Geophys. Res. Lett.<a href="https://doi.org/10.1002/2016GL069931" target="_blank">doi.org/10.1002/2016GL069931</a>.</li>
-        </ul-->
-
-        <h4>Conference Proceedings:</h4>
+        <h3 class="push-down-4"><span>Conference Proceedings</span></h3>
 
         <ul class="publications">
           <li>1. Mahanti, S.S., Mitra, S. and Miyake, H., Teleseismic Source Modelling of Strong-to-major Himalayan Earthquakes, <em>AGU Fall Meeting Abstracts (2020),</em> (Vol. 2020, pp. S037-0015).</li>
