--- a/research.html
+++ b/research.html
@@ -81,6 +81,19 @@
         <h3 class="push-down-4"><span>Conference Proceedings</span></h3>
 
         <ul class="publications">
+          <ul>
+
+  <li><strong>[1]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2023). <strong>Orogen-parallel variations in seismicity in the Central Andes recorded by the TANGO seismic deployment</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2024</em>, T51B-3142.</li>
+
+  <li><strong>[2]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2023). <strong>Seismic imaging of Southern Central Andes by ambient noise autocorrelation of nodal seismic data</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2024</em>, S21C-3438.</li>
+
+  <li><strong>[3]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2023). <strong>Preliminary earthquake catalog of the Southern Central Andes (23–24°S) recorded by the TANGO seismic deployment</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2023</em>, T21F-0254.</li>
+
+  <li><strong>[4]</strong> Mahanti, S. S., Kiser, E., & Beck, S. L. (2022). <strong>Crustal seismicity in the Southern Puna Plateau and relation with shallow crustal structures</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2022</em>, S55A-03.</li>
+
+  <li><strong>[5]</strong> Mahanti, S. S., Mitra, S., & Miyake, H. (2020). <strong>Teleseismic source modelling of strong-to-major Himalayan earthquakes</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2020</em>, S037-0015.</li>
+</ul>
+
           <li>1. Mahanti, S.S., Mitra, S. and Miyake, H., Teleseismic Source Modelling of Strong-to-major Himalayan Earthquakes, <em>AGU Fall Meeting Abstracts (2020),</em> (Vol. 2020, pp. S037-0015).</li>
           <li>2. Banerjee, R., Mahanti, S. S., Chaudhuri, D., Chatterjee, A., and Mitra, S., Intraplate Strike-slip Earthquakes in NE India: A Kinematic Model, <em>AGU Fall Meeting abstracts (2021).</em></li>
         </ul>
