--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@
 
     <div class="row">
       <div class="col-sm-12">
-        
+         <h1>Publications</h1>
         <!-- List of Research interests -->
         <!--<ul class="push-down-1 list-unstyled">
           <li><strong>Seismic waveform modeling</strong>&mdash;{A brief description of this area}</li>
@@ -73,10 +73,8 @@
         <!-- Publication -->
         <h3 class="push-down-4"><span>Journal Papers</span></h3>
         <ul class="publications">
-          <li>1. Mahanti, S.S., Mitra, S. and Miyake, H., Teleseismic Source Modelling of Strong-to-major Himalayan Earthquakes, <em>AGU Fall Meeting Abstracts (2020),</em> (Vol. 2020, pp. S037-0015).</li>
-          <li>2. Banerjee, R., Mahanti, S. S., Chaudhuri, D., Chatterjee, A., and Mitra, S., Intraplate Strike-slip Earthquakes in NE India: A Kinematic Model, <em>AGU Fall Meeting abstracts (2021).</em></li>
+            <li><strong>[J.1]</strong> Mahanti, S. S., Kiser, E., Beck, S. L., & Hughes, A. N. (2024). <strong>Seismicity and present-day crustal deformation in the Southern Puna Plateau</strong>. <em>Journal of Geophysical Research: Solid Earth</em>, <em>129</em>, e2024JB028918. <a href="https://doi.org/10.1029/2024JB028918" target="_blank">https://doi.org/10.1029/2024JB028918</a></li>
         </ul>
-
         
         <h3 class="push-down-4"><span>Conference Proceedings</span></h3>
 
@@ -93,10 +91,6 @@
 
   <li><strong>[5]</strong> Mahanti, S. S., Mitra, S., & Miyake, H. (2020). <strong>Teleseismic source modelling of strong-to-major Himalayan earthquakes</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2020</em>, S037-0015.</li>
 </ul>
-
-          <li>1. Mahanti, S.S., Mitra, S. and Miyake, H., Teleseismic Source Modelling of Strong-to-major Himalayan Earthquakes, <em>AGU Fall Meeting Abstracts (2020),</em> (Vol. 2020, pp. S037-0015).</li>
-          <li>2. Banerjee, R., Mahanti, S. S., Chaudhuri, D., Chatterjee, A., and Mitra, S., Intraplate Strike-slip Earthquakes in NE India: A Kinematic Model, <em>AGU Fall Meeting abstracts (2021).</em></li>
-        </ul>
 
         <!-- <h5>Invited Talks</h5>
 
