--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
         <!-- Publication -->
         <h3 class="push-down-4"><span>Journal Papers</span></h3>
         <ul class="publications">
-            <li><strong>[J.1]</strong> Mahanti, S. S., Kiser, E., Beck, S. L., & Hughes, A. N. (2024). <strong>Seismicity and present-day crustal deformation in the Southern Puna Plateau</strong>. <em>Journal of Geophysical Research: Solid Earth</em>, <em>129</em>, e2024JB028918. <a href="https://doi.org/10.1029/2024JB028918" target="_blank">https://doi.org/10.1029/2024JB028918</a></li>
+            <li><strong>[1]</strong> Mahanti, S. S., Kiser, E., Beck, S. L., & Hughes, A. N. (2024). <strong>Seismicity and present-day crustal deformation in the Southern Puna Plateau</strong>. <em>Journal of Geophysical Research: Solid Earth</em>, <em>129</em>, e2024JB028918. <a href="https://doi.org/10.1029/2024JB028918" target="_blank">https://doi.org/10.1029/2024JB028918</a></li>
         </ul>
         
         <h3 class="push-down-4"><span>Conference Proceedings</span></h3>
@@ -81,7 +81,7 @@
         <ul class="publications">
           <ul>
 
-  <li><strong>[1]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2023). <strong>Orogen-parallel variations in seismicity in the Central Andes recorded by the TANGO seismic deployment</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2024</em>, T51B-3142.</li>
+  <li><strong>[1]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2024). <strong>Orogen-parallel variations in seismicity in the Central Andes recorded by the TANGO seismic deployment</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2024</em>, T51B-3142.</li>
 
   <li><strong>[2]</strong> Mahanti, S. S., Kiser, E., Beck, S., Roecker, S. W., Porter, R. C., Comte, D., ... & Ducea, M. N. (2023). <strong>Seismic imaging of Southern Central Andes by ambient noise autocorrelation of nodal seismic data</strong>. <em>AGU Fall Meeting Abstracts</em>, <em>2024</em>, S21C-3438.</li>
 
