--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p class="position-title mt-2 mb-1" style="line-height:14%" >Graduate Student, Department of Geosciences</p>
         <p class="position-title mt-0 mb-4" style="line-height:14%">The University of Arizona</p>
 
-       <p>I am a PhD candidate (4th year) in the Geoscience department at the University of Arizona. I am working with Dr. Eric Kiser in the Global Seismology and Tectonics (GSAT) group. Originally, I am from India and started my PhD journey from Fall 2021 after completing my bachelor’s and master’s degree (BS-MS) in Physics from Indian Institute of Science Education and Research (IISER) Kolkata, India (2016-2021). <br />
+       <p>I am a PhD candidate (5th year) in the Geoscience department at the University of Arizona. I am working with Dr. Eric Kiser in the Global Seismology and Tectonics (GSAT) group. Originally, I am from India and started my PhD journey from Fall 2021 after completing my bachelor’s and master’s degree (BS-MS) in Physics from Indian Institute of Science Education and Research (IISER) Kolkata, India (2016-2021). <br />
 
         In terms of research, I primarily work on computational seismology to understand crustal seismicity and crustal structure in the Andes mountains in South America. My work focuses on earthquake detection with deep learning, seismic tomography, and imaging of crustal reflective layers with autocorrelation methods.<br />
         </p>
@@ -126,7 +126,7 @@
       <ol id="news">
       <li>
       <p>We published a paper titled <strong>"Seismicity and Present-day Crustal Deformation in the Southern Puna Plateau"</strong> in JGR: Solid Earth. 
-        (<a href=" https://doi.org/10.1029/2024JB028918" target="_blank"> https://doi.org/10.1029/2024JB028918</a>)
+        <br> (<a href=" https://doi.org/10.1029/2024JB028918" target="_blank"> https://doi.org/10.1029/2024JB028918</a>)
       </li>
       <li>
       <p>I gave a talk titled <strong>"Beyond the Big Ones"</strong> at the <a href="https://tedx.arizona.edu/" target="_blank">TEDxUofA</a> event on October 18, 2024.</p>
