--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
               <p>The Indian plate is colliding with the Eurasian plate resulting in the tectonically active Himalaya region. Hence, this is an active seismic zone with frequent seismic activity. But due to the non-uniform rate of convergence of the Indian and Eurasian plate, the tectonic nature varies. So, the nature of earthquakes vary as well. Hence, we look at the earthquakes along the Himalayan arc in the last 30 years and compare the earthquake mechanisms at different regions. We use three different inversion methods using tools from Physics and Mathematics to model the earthquakes. The large megathrust earthquakes are modelled as multiple point sources using finite fault inversion method whereas moderate to strong earthquakes are modelled as a single point source using moment tensor inversion method. Moreover, we applied a new bootstrapping based probabilistic inversion method and compared the results. Finally, we look at the obtained mechanisms in cross-section profiles across the Himalaya at different regions along with microseismicity distribution, local structure and topography.</p></div>
           </div>
         </div>
-        <!--div class="col-sm-6 col-md-6">
+        <div class="col-sm-6 col-md-6">
           <div class="panel panel-default pointer" data-url="https://google.com">
             <div class="panel-heading proj-4">
             </div>
@@ -121,7 +121,7 @@
               <h5>Teton Fault</h5>
               <p>This is a side project that I started in the first year of my PhD in an effort to use local earthquakes to image the Teton Fault in NW Wyoming. We deployed 96 nodal seismometers in the hanging wall of the Teton Fault for 30 days. An undergraduate in our lab detected and located over 100 earthquakes in the region (excluding any coming from the very active Yellowstone caldera). On going work is using machine learning techniques to locate more events and conduct an imaging study of the basin and to identify the structure of the fault at depth.</p></div>
           </div>
-        </div>
+        <!--/div>
 </div>
          <div class="col-sm-6 col-md-4">
           <div class="panel panel-default pointer" data-url="https://google.com">
