--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
             <div class="panel-heading proj-1">
             </div>
             <div class="panel-body">
-            <h5>TANGO</h5>
+            <h5>TANGO Seismicity</h5>
             <p><a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> (TransANdean Great Orogeny) is a multi-disciplinary project to identify the processes responsible for variations in crustal thickness and uplift along the Andes.This is the primary project I shall work during my PhD. I am working on the seismic part of this project which is the first ever deployment to utilize nodal instruments at a large spatial and temporal scale, allowing us to simultaneously leverage station density and the large number of seismic sources provided by the 5-6 month deployment time starting from July 2022. This Deployment of two dense lines with ~2-3 km spacing for ~600 km on the northern transect and ~400 km on the southern transect with BB seismic stations at ~30 km spacing will provide us an unprecedented seismic dataset for the Andes. We currently have the first month of seismic data from the nodal seismometers which shows good record section plots for a few deep-earthquakes recorded in the network.</p> 
           </div>
         </div>
@@ -98,10 +98,10 @@
             <div class="panel-heading proj-2">
             </div>
             <div class="panel-body">
-              <h5>Crustal Seismicity in Southern Puna Plateau</h5>
-              <p>This study investigates the relationships between seismicity, mapped faults, and volcanism in the southern Puna Plateau using 21 months of broadband and short-period seismic data recorded between January 2008 and September 2009. P and S phase picking is performed using a deep neural-network based phase picker with this continuous dataset. This method gives us approximately an order of magnitude more crustal earthquakes than previous studies. Many of the earthquakes are located near mapped faults in the region as well as underneath the volcanoes.
-              To better understand the relationship between the earthquakes, volcanoes, and subsurface structure, we have performed local earthquake tomography using the travel times of the earthquakes. Inversion results show low velocity anomalies close to volcanic regions in the upper and middle crust and focused seismicity near boundaries between high and low velocity anomalies.  
-</p>  </p></div>
+              <h5>TANGO Autocorrelation</h5>
+              <p><a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> (TransANdean Great Orogeny) is a multi-disciplinary project to identify the processes responsible for variations in crustal thickness and uplift along the Andes.This is the primary project I shall work during my PhD. I am working on the seismic part of this project which is the first ever deployment to utilize nodal instruments at a large spatial and temporal scale, allowing us to simultaneously leverage station density and the large number of seismic sources provided by the 5-6 month deployment time starting from July 2022. This Deployment of two dense lines with ~2-3 km spacing for ~600 km on the northern transect and ~400 km on the southern transect with BB seismic stations at ~30 km spacing will provide us an unprecedented seismic dataset for the Andes. We currently have the first month of seismic data from the nodal seismometers which shows good record section plots for a few deep-earthquakes recorded in the network.</p> 
+
+                </p></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-6">
@@ -109,8 +109,10 @@
             <div class="panel-heading proj-3">
             </div>
             <div class="panel-body">
-              <h5>Source Study of Himalayan Earthquakes (MS Project)</h5>
-              <p>The Indian plate is colliding with the Eurasian plate resulting in the tectonically active Himalaya region. Hence, this is an active seismic zone with frequent seismic activity. But due to the non-uniform rate of convergence of the Indian and Eurasian plate, the tectonic nature varies. So, the nature of earthquakes vary as well. Hence, we look at the earthquakes along the Himalayan arc in the last 30 years and compare the earthquake mechanisms at different regions. We use three different inversion methods using tools from Physics and Mathematics to model the earthquakes. The large megathrust earthquakes are modelled as multiple point sources using finite fault inversion method whereas moderate to strong earthquakes are modelled as a single point source using moment tensor inversion method. Moreover, we applied a new bootstrapping based probabilistic inversion method and compared the results. Finally, we look at the obtained mechanisms in cross-section profiles across the Himalaya at different regions along with microseismicity distribution, local structure and topography.</p></div>
+              <h5>Crustal Seismicity in Southern Puna Plateau</h5>
+              <p>This study investigates the relationships between seismicity, mapped faults, and volcanism in the southern Puna Plateau using 21 months of broadband and short-period seismic data recorded between January 2008 and September 2009. P and S phase picking is performed using a deep neural-network based phase picker with this continuous dataset. This method gives us approximately an order of magnitude more crustal earthquakes than previous studies. Many of the earthquakes are located near mapped faults in the region as well as underneath the volcanoes.
+              To better understand the relationship between the earthquakes, volcanoes, and subsurface structure, we have performed local earthquake tomography using the travel times of the earthquakes. Inversion results show low velocity anomalies close to volcanic regions in the upper and middle crust and focused seismicity near boundaries between high and low velocity anomalies.  
+</p>
           </div>
         </div>
         <div class="col-sm-6 col-md-6">
@@ -118,8 +120,8 @@
             <div class="panel-heading proj-4">
             </div>
             <div class="panel-body">
-              <h5>Teton Fault</h5>
-              <p>This is a side project that I started in the first year of my PhD in an effort to use local earthquakes to image the Teton Fault in NW Wyoming. We deployed 96 nodal seismometers in the hanging wall of the Teton Fault for 30 days. An undergraduate in our lab detected and located over 100 earthquakes in the region (excluding any coming from the very active Yellowstone caldera). On going work is using machine learning techniques to locate more events and conduct an imaging study of the basin and to identify the structure of the fault at depth.</p></div>
+             <h5>Source Study of Himalayan Earthquakes (MS Project)</h5>
+              <p>The Indian plate is colliding with the Eurasian plate resulting in the tectonically active Himalaya region. Hence, this is an active seismic zone with frequent seismic activity. But due to the non-uniform rate of convergence of the Indian and Eurasian plate, the tectonic nature varies. So, the nature of earthquakes vary as well. Hence, we look at the earthquakes along the Himalayan arc in the last 30 years and compare the earthquake mechanisms at different regions. We use three different inversion methods using tools from Physics and Mathematics to model the earthquakes. The large megathrust earthquakes are modelled as multiple point sources using finite fault inversion method whereas moderate to strong earthquakes are modelled as a single point source using moment tensor inversion method. Moreover, we applied a new bootstrapping based probabilistic inversion method and compared the results. Finally, we look at the obtained mechanisms in cross-section profiles across the Himalaya at different regions along with microseismicity distribution, local structure and topography.</p></div>
           </div>
         <!--/div>
 </div>
