--- a/projects.html
+++ b/projects.html
@@ -66,149 +66,107 @@
   <!-- navbar include -->
   <div id="navbar-include"></div>
 
-  <div class="spacer-div-3 hidden-xs hidden-xs"></div>
+  <div class="spacer-div-3 hidden-xs"></div>
 
-  <!-- Main content    -->
+  <!-- Main content -->
   <div id="main-container" class="container">
 
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-12">
         <h1>Projects</h1>
-        <p><em>Here are some of my recent projects:</em> </p>
-
+        <p><em>Here are some of my recent projects:</em></p>
       </div>
-
     </div>
 
-    <div class="row push-down-1" id="projects">
+    <!-- Projects Grid -->
+    <div class="row" id="projects">
 
-    <!-- If you don't want the cards to be links, simply remove the {data-url='some link'} attribute -->
-        <div class="col-sm-6 col-md-6">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-1">
-            </div>
-            <div class="panel-body">
+      <!-- Project 1 -->
+      <div class="col-12 col-md-6">
+        <div class="panel panel-default pointer" data-url="https://google.com">
+          <div class="panel-heading proj-1"></div>
+          <div class="panel-body">
             <h5>TANGO Seismicity</h5>
-            <p><a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> (TransANdean Great Orogeny) is a multi-disciplinary project to identify the processes responsible for variations in crustal thickness and uplift along the Andes.This is the primary project I shall work during my PhD. I am working on the seismic part of this project which is the first ever deployment to utilize nodal instruments at a large spatial and temporal scale, allowing us to simultaneously leverage station density and the large number of seismic sources provided by the 5-6 month deployment time starting from July 2022. This Deployment of two dense lines with ~2-3 km spacing for ~600 km on the northern transect and ~400 km on the southern transect with BB seismic stations at ~30 km spacing will provide us an unprecedented seismic dataset for the Andes. We currently have the first month of seismic data from the nodal seismometers which shows good record section plots for a few deep-earthquakes recorded in the network.</p> 
+            <p>
+              <a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a> (TransANdean Great Orogeny) investigates crustal thickness and uplift along the Andes. I work on the seismic component using nodal instruments in a large-scale deployment starting July 2022. This setup enables high station density and rich seismic source data. Our first month of nodal data shows promising deep-earthquake record sections.
+            </p>
           </div>
         </div>
       </div>
-        <div class="col-sm-6 col-md-6">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-2">
-            </div>
-            <div class="panel-body">
-              <h5>TANGO Autocorrelation</h5>
-              <p><a href="https://www.geo.arizona.edu/gsat/tango/seismic">TANGO</a> (TransANdean Great Orogeny) is a multi-disciplinary project to identify the processes responsible for variations in crustal thickness and uplift along the Andes.This is the primary project I shall work during my PhD. I am working on the seismic part of this project which is the first ever deployment to utilize nodal instruments at a large spatial and temporal scale, allowing us to simultaneously leverage station density and the large number of seismic sources provided by the 5-6 month deployment time starting from July 2022. This Deployment of two dense lines with ~2-3 km spacing for ~600 km on the northern transect and ~400 km on the southern transect with BB seismic stations at ~30 km spacing will provide us an unprecedented seismic dataset for the Andes. We currently have the first month of seismic data from the nodal seismometers which shows good record section plots for a few deep-earthquakes recorded in the network.</p> 
 
-                </p></div>
+      <!-- Project 2 -->
+      <div class="col-12 col-md-6">
+        <div class="panel panel-default pointer" data-url="https://google.com">
+          <div class="panel-heading proj-2"></div>
+          <div class="panel-body">
+            <h5>TANGO Autocorrelation</h5>
+            <p>
+              As part of the TANGO project, this effort focuses on passive seismic autocorrelation analysis to image crustal and upper mantle structures. The dense nodal array and extended deployment provide ideal data for high-resolution imaging. This complements our active seismic studies and enhances interpretation of structural features beneath the Andes.
+            </p>
           </div>
         </div>
-        <div class="col-sm-6 col-md-6">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-3">
-            </div>
-            <div class="panel-body">
-              <h5>Crustal Seismicity in Southern Puna Plateau</h5>
-              <p>This study investigates the relationships between seismicity, mapped faults, and volcanism in the southern Puna Plateau using 21 months of broadband and short-period seismic data recorded between January 2008 and September 2009. P and S phase picking is performed using a deep neural-network based phase picker with this continuous dataset. This method gives us approximately an order of magnitude more crustal earthquakes than previous studies. Many of the earthquakes are located near mapped faults in the region as well as underneath the volcanoes.
-              To better understand the relationship between the earthquakes, volcanoes, and subsurface structure, we have performed local earthquake tomography using the travel times of the earthquakes. Inversion results show low velocity anomalies close to volcanic regions in the upper and middle crust and focused seismicity near boundaries between high and low velocity anomalies.  
-</p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-4">
-            </div>
-            <div class="panel-body">
-             <h5>Source Study of Himalayan Earthquakes (MS Project)</h5>
-              <p>The Indian plate is colliding with the Eurasian plate resulting in the tectonically active Himalaya region. Hence, this is an active seismic zone with frequent seismic activity. But due to the non-uniform rate of convergence of the Indian and Eurasian plate, the tectonic nature varies. So, the nature of earthquakes vary as well. Hence, we look at the earthquakes along the Himalayan arc in the last 30 years and compare the earthquake mechanisms at different regions. We use three different inversion methods using tools from Physics and Mathematics to model the earthquakes. The large megathrust earthquakes are modelled as multiple point sources using finite fault inversion method whereas moderate to strong earthquakes are modelled as a single point source using moment tensor inversion method. Moreover, we applied a new bootstrapping based probabilistic inversion method and compared the results. Finally, we look at the obtained mechanisms in cross-section profiles across the Himalaya at different regions along with microseismicity distribution, local structure and topography.
-              </p>
-            </div>
-          </div>
-        </div>
-<!--/div>
-         <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-5">
-            </div>
-            <div class="panel-body">
-              <h5>Project 5</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div> -->
-
-        <!-- <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-6">
-            </div>
-            <div class="panel-body">
-              <h5>Project 6</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-7">
-            </div>
-            <div class="panel-body">
-              <h5>Project 7</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-8">
-            </div>
-            <div class="panel-body">
-              <h5>Project 8</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-9">
-            </div>
-            <div class="panel-body">
-              <h5>Project 9</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-10">
-            </div>
-            <div class="panel-body">
-              <h5>Project 10</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-11">
-            </div>
-            <div class="panel-body">
-              <h5>Project 11</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <div class="panel panel-default pointer" data-url="https://google.com">
-            <div class="panel-heading proj-12">
-            </div>
-            <div class="panel-body">
-              <h5>Project 12</h5>
-              <p>Description of project hereLorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex sed illo, fugit?</p></div>
-          </div>
-        </div> -->
-
       </div>
-      <!-- row -->
 
-  </div>
+      <!-- Spacer -->
+      <div class="w-100 d-block d-md-none my-3"></div>
+
+      <!-- Project 3 -->
+      <div class="col-12 col-md-6">
+        <div class="panel panel-default pointer" data-url="https://google.com">
+          <div class="panel-heading proj-3"></div>
+          <div class="panel-body">
+            <h5>Crustal Seismicity in Southern Puna Plateau</h5>
+            <p>
+              This study uses 21 months of seismic data to explore the relationship between seismicity, faults, and volcanism in the southern Puna Plateau. Using a deep learning phase picker, we detected significantly more crustal earthquakes than previous studies. Tomographic inversion revealed low-velocity anomalies near volcanoes and focused seismicity near velocity boundaries.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="col-12 col-md-6">
+        <div class="panel panel-default pointer" data-url="https://google.com">
+          <div class="panel-heading proj-4"></div>
+          <div class="panel-body">
+            <h5>Source Study of Himalayan Earthquakes (MS Project)</h5>
+            <p>
+              We analyzed earthquakes along the Himalayan arc over 30 years to understand regional variations in tectonics. Using multiple inversion techniques, including moment tensor and probabilistic bootstrapping, we modeled earthquake mechanisms and compared them across cross-sectional profiles, revealing tectonic diversity along the arc.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- /#projects -->
+
+  </div> <!-- /.container -->
+
+  <!-- Make the entire panel clickable -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document.querySelectorAll(".pointer[data-url]").forEach(panel => {
+        panel.addEventListener("click", function () {
+          const url = this.getAttribute("data-url");
+          if (url) window.open(url, "_blank");
+        });
+      });
+    });
+  </script>
+
+  <!-- Optional: Simple panel heading styling -->
+  <style>
+    .panel-heading {
+      height: 150px;
+      background-size: cover;
+      background-position: center;
+    }
+    .proj-1 { background-image: url('img/proj-1.jpg'); }
+    .proj-2 { background-image: url('img/proj-2.jpg'); }
+    .proj-3 { background-image: url('img/proj-3.jpg'); }
+    .proj-4 { background-image: url('img/proj-4.jpg'); }
+  </style>
+
+</body>
+
 
   <!-- Back-to-top button -->
   <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link" href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
