--- a/projects.html
+++ b/projects.html
@@ -89,11 +89,8 @@
             <h5>TANGO Seismicity</h5>
             <p>
               The Andes Mountain Range exhibits distinct along strike variations in crustal thickness, shortening and uplift. 
-              Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (TANGO) project to understand the driving processes 
+              Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (<a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a>) project to understand the driving processes 
               for the along strike variations in Andean deformation. These two datasets are used to build an earthquake catalog of each of those two regions using a machine-learning-based workflow. This study focuses on identification of key differences in seismicity as revealed by the new earthquake catalogs, which also reflects the variation in deformation processes that resulted in the along strike variations in the Andes.
-            </p>
-            <p>
-              <a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a> (TransANdean Great Orogeny) investigates crustal thickness and uplift along the Andes. I work on the seismic component using nodal instruments in a large-scale deployment starting July 2022. This setup enables high station density and rich seismic source data. Our first month of nodal data shows promising deep-earthquake record sections.
             </p>
           </div>
         </div>
