--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,9 @@
           <div class="panel-body">
             <h5>TANGO Autocorrelation</h5>
             <p>
-              As part of the TANGO project, this effort focuses on passive seismic autocorrelation analysis to image crustal and upper mantle structures. The dense nodal array and extended deployment provide ideal data for high-resolution imaging. This complements our active seismic studies and enhances interpretation of structural features beneath the Andes.
+              The Andes Mountain Range exhibits distinct along strike variations in crustal thickness, shortening and uplift. 
+              Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (<a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a>) project to understand the driving processes 
+              for the along strike variations in Andean deformation. These two datasets are used to build an earthquake catalog of each of those two regions using a machine-learning-based workflow. This study focuses on identification of key differences in seismicity as revealed by the new earthquake catalogs, which also reflects the variation in deformation processes that resulted in the along strike variations in the Andes.
             </p>
           </div>
         </div>
