--- a/projects.html
+++ b/projects.html
@@ -103,9 +103,10 @@
           <div class="panel-body">
             <h5>TANGO Autocorrelation</h5>
             <p>
-              The Andes Mountain Range exhibits distinct along strike variations in crustal thickness, shortening and uplift. 
-              Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (<a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a>) project to understand the driving processes 
-              for the along strike variations in Andean deformation. These two datasets are used to build an earthquake catalog of each of those two regions using a machine-learning-based workflow. This study focuses on identification of key differences in seismicity as revealed by the new earthquake catalogs, which also reflects the variation in deformation processes that resulted in the along strike variations in the Andes.
+              Autocorrelation of seismic waveform or ambient noise data recorded on individual seismic stations can reveal subsurface reflectivity underneath the station. 
+              In this study, to image the major subsurface boundaries, this processing method is implemented on the data collected by a dense array of three-component nodal and broadband 
+              seismometers at ~23-24˚S, deployed as part of the TANGO project. The autocorrelation traces are used to identify major subsurface boundaries within the different tectonic units including the Moho, basal detachments in the Eastern Cordillera fold-and-thrust belt, and crustal magma bodies in the volcanic arc and the Puna plateau.
+
             </p>
           </div>
         </div>
