--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,9 @@
           <div class="panel-body">
             <h5>Crustal Seismicity in Southern Puna Plateau</h5>
             <p>
-              This study uses 21 months of seismic data to explore the relationship between seismicity, faults, and volcanism in the southern Puna Plateau. Using a deep learning phase picker, we detected significantly more crustal earthquakes than previous studies. Tomographic inversion revealed low-velocity anomalies near volcanoes and focused seismicity near velocity boundaries.
+            The Southern Puna plateau in the central Andes has a complicated tectonic history that includes episodes of distributed shortening and extension, lithospheric delamination, uplift and Quaternary backarc volcanism. 
+              In this study, the upper crustal structure and present-day deformation in this area is investigated using a new regional earthquake catalog derived with a deep-learning-based phase picker. Results show abundant strike-slip seismicity at shallow depths 
+              in the eastern Southern Puna plateau, a broad zone of seismic quiescence in the western plateau, and a complex stress field in the region separating eastern and western plateau. The study is now published in the Journal of Geophysical Research: Solid Earth ( https://doi.org/10.1029/2024JB028918).            
             </p>
           </div>
         </div>
