--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
             <p>
               Autocorrelation of seismic waveform or ambient noise data recorded on individual seismic stations can reveal subsurface reflectivity underneath the station. 
               In this study, to image the major subsurface boundaries, this processing method is implemented on the data collected by a dense array of three-component nodal and broadband 
-              seismometers at ~23-24˚S, deployed as part of the TANGO project. The autocorrelation traces are used to identify major subsurface boundaries within the different tectonic units including the Moho, basal detachments in the Eastern Cordillera fold-and-thrust belt, and crustal magma bodies in the volcanic arc and the Puna plateau.
+              seismometers at ~23-24˚S, deployed as part of the <a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a> project. The autocorrelation traces are used to identify major subsurface boundaries within the different tectonic units including the Moho, basal detachments in the Eastern Cordillera fold-and-thrust belt, and crustal magma bodies in the volcanic arc and the Puna plateau.
             <br>
             <br>
             </p>
@@ -123,9 +123,9 @@
           <div class="panel-body">
             <h5>Crustal Seismicity in Southern Puna Plateau</h5>
             <p>
-            The Southern Puna plateau in the central Andes has a complicated tectonic history that includes episodes of distributed shortening and extension, lithospheric delamination, uplift and Quaternary backarc volcanism. 
-              In this study, the upper crustal structure and present-day deformation in this area is investigated using a new regional earthquake catalog derived with a deep-learning-based phase picker. Results show abundant strike-slip seismicity at shallow depths 
-              in the eastern Southern Puna plateau, a broad zone of seismic quiescence in the western plateau, and a complex stress field in the region separating eastern and western plateau. The study is now published in the Journal of Geophysical Research: Solid Earth ( https://doi.org/10.1029/2024JB028918).            
+              In this study, the upper crustal structure and present-day deformation in the Southern Puna Plateau is investigated using a new regional earthquake catalog derived with a deep-learning-based phase picker. 
+              Results show an order higher number of events compared to previous study, abundant strike-slip seismicity at shallow depths in the eastern Southern Puna plateau, a broad zone of seismic quiescence in the western plateau, a complex stress field in the region separating eastern and western plateau, and a well-constrained seismic swarm. 
+              The study is now published in the Journal of Geophysical Research: Solid Earth [<a href="https://doi.org/10.1029/2024JB028918" target="_blank">LINK</a>].
             </p>
           </div>
         </div>
